--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redis": "~0.8.4",
     "slug-component": "~1.1.0",
     "validator": "~1.3.0",
-    "connect-cachify": "0.0.15"
+    "connect-cachify": "0.0.15",
+    "lastfmapi": "0.0.4"
   }
 }
